--- a/.github/workflows/dependabot-project-board-sync.lock.yml
+++ b/.github/workflows/dependabot-project-board-sync.lock.yml
@@ -292,6 +292,11 @@ jobs:
                     "description": "Optional body for a Projects v2 draft issue (markdown). Only used when content_type is 'draft_issue'.",
                     "type": "string"
                   },
+                  "draft_issue_id": {
+                    "description": "Temporary ID of an existing draft issue to update (e.g., 'aw_abc123def456' or '#aw_abc123def456'). Use this to reference a draft created earlier with a matching temporary_id. When provided, draft_title is not required for updates.",
+                    "pattern": "^#?aw_[0-9a-f]{12}$",
+                    "type": "string"
+                  },
                   "draft_title": {
                     "description": "Title for a Projects v2 draft issue. Required when content_type is 'draft_issue'.",
                     "type": "string"
@@ -347,6 +352,11 @@ jobs:
                   "project": {
                     "description": "Full GitHub project URL (e.g., 'https://github.com/orgs/myorg/projects/42' or 'https://github.com/users/username/projects/5'), or a temporary project ID from a recent create_project call (e.g., '#aw_abc123def456' or 'aw_abc123def456'). Project names or numbers alone are NOT accepted.",
                     "pattern": "^(https://github\\.com/(orgs|users)/[^/]+/projects/\\d+|#?aw_[0-9a-f]{12})$",
+                    "type": "string"
+                  },
+                  "temporary_id": {
+                    "description": "Unique temporary identifier for this draft issue (e.g., 'aw_abc123def456' or '#aw_abc123def456'). Provide this when creating a new draft to enable future updates via draft_issue_id. Format: optional leading '#', then 'aw_' followed by 12 hex characters.",
+                    "pattern": "^#?aw_[0-9a-f]{12}$",
                     "type": "string"
                   },
                   "view": {
@@ -706,6 +716,8 @@ jobs:
           </important>
           <instructions>
           To create or modify GitHub resources (issues, discussions, pull requests, etc.), you MUST call the appropriate safe output tool. Simply writing content will NOT work - the workflow requires actual tool calls.
+          
+          Temporary IDs: Some safe output tools support a temporary ID field (usually named temporary_id) so you can reference newly-created items elsewhere in the SAME agent output (for example, using #aw_abc123def456 in a later body). If nothing needs to reference the item, you can omit temporary_id. If you DO need cross-references/chaining (including draft issue chaining in update_project via temporary_id + draft_issue_id), you MUST provide temporary_id yourself in the strict format: aw_ followed by 12 hexadecimal characters (0-9, a-f), e.g. aw_abc123def456, and reuse that exact value consistently. Do NOT invent other aw_* formats (e.g. aw_bundle_npm001) — downstream steps will reject them.
           
           Discover available tools from the safeoutputs MCP server.
           
