--- a/.github/workflows/dependabot-project-board-sync.lock.yml
+++ b/.github/workflows/dependabot-project-board-sync.lock.yml
@@ -293,8 +293,8 @@ jobs:
                     "type": "string"
                   },
                   "draft_issue_id": {
-                    "description": "Temporary ID of an existing draft issue to update (e.g., 'aw_abc123def456' or '#aw_abc123def456'). Use this to reference a draft created earlier with a matching temporary_id. When provided, draft_title is not required for updates.",
-                    "pattern": "^#?aw_[0-9a-f]{12}$",
+                    "description": "Temporary ID of an existing draft issue to update (e.g., 'aw_abc123def456'). Use this to reference a draft created earlier with a matching temporary_id. When provided, draft_title is not required for updates.",
+                    "pattern": "^aw_[0-9a-f]{12}$",
                     "type": "string"
                   },
                   "draft_title": {
@@ -355,8 +355,8 @@ jobs:
                     "type": "string"
                   },
                   "temporary_id": {
-                    "description": "Unique temporary identifier for this draft issue (e.g., 'aw_abc123def456' or '#aw_abc123def456'). Provide this when creating a new draft to enable future updates via draft_issue_id. Format: optional leading '#', then 'aw_' followed by 12 hex characters.",
-                    "pattern": "^#?aw_[0-9a-f]{12}$",
+                    "description": "Unique temporary identifier for this draft issue (e.g., 'aw_abc123def456'). Provide this when creating a new draft to enable future updates via draft_issue_id. Format: 'aw_' followed by 12 hex characters.",
+                    "pattern": "^aw_[0-9a-f]{12}$",
                     "type": "string"
                   },
                   "view": {
@@ -717,7 +717,18 @@ jobs:
           <instructions>
           To create or modify GitHub resources (issues, discussions, pull requests, etc.), you MUST call the appropriate safe output tool. Simply writing content will NOT work - the workflow requires actual tool calls.
           
-          Temporary IDs: Some safe output tools support a temporary ID field (usually named temporary_id) so you can reference newly-created items elsewhere in the SAME agent output (for example, using #aw_abc123def456 in a later body). If nothing needs to reference the item, you can omit temporary_id. If you DO need cross-references/chaining (including draft issue chaining in update_project via temporary_id + draft_issue_id), you MUST provide temporary_id yourself in the strict format: aw_ followed by 12 hexadecimal characters (0-9, a-f), e.g. aw_abc123def456, and reuse that exact value consistently. Do NOT invent other aw_* formats (e.g. aw_bundle_npm001) — downstream steps will reject them.
+          Temporary IDs: Some safe output tools support a temporary ID field (usually named temporary_id) so you can reference newly-created items elsewhere in the SAME agent output (for example, using #aw_abc123def456 in a later body). 
+          
+          **IMPORTANT - temporary_id format rules:**
+          - If you DON'T need to reference the item later, OMIT the temporary_id field entirely (it will be auto-generated if needed)
+          - If you DO need cross-references/chaining, you MUST match this EXACT validation regex: /^aw_[0-9a-f]{12}$/i
+          - Format: aw_ prefix followed by EXACTLY 12 hexadecimal characters (0-9, a-f, case-insensitive)
+          - Valid hex characters ONLY: 0123456789abcdef (lowercase or uppercase)
+          - INVALID examples: aw_bundle000004 (contains 'u', 'n', 'l' which are NOT hex), aw_issue_001 (contains '_' and non-hex), aw_npm123 (too short)
+          - VALID examples: aw_abc123def456, aw_000011112222, aw_deadbeef9876, aw_1a2b3c4d5e6f
+          - To generate valid IDs: use exactly 12 random hex digits or omit the field to let the system auto-generate
+          
+          Do NOT invent other aw_* formats — downstream steps will reject them with validation errors matching against /^aw_[0-9a-f]{12}$/i.
           
           Discover available tools from the safeoutputs MCP server.
           
